# data_dep

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  processed_pdfs.json  pyproject.toml  requirements.txt  st_style_output_demo.py
insight_engine/: __init__.py  agent.py  vectordb.py
insight_engine/api/: __init__.py  routers.py
insight_engine/models/: models.py
insight_engine/pdf_extraction/: pdf_extraction.py  pdf_extraction_c.py
insight_engine/prompt/: __init__.py  audience.py  knowledge.py  store.py  system_prompts.py  user_types.py
insight_engine/rag_creation/: rag_creation.py
insight_engine/rag_creation/data_depo/: 0006d00f-a571-4eb6-8b10-5c24670457e0  0023a265-b3b8-42b6-9aba-eee67b75e51b  002cac62-593e-4389-9775-3c8e1cbd1dcc  0034518b-c13f-4d80-977a-72e835d37fc4  003b48d0-d7e8-4a2a-be00-2e83f0f413a0  006ea28b-29c0-459c-a0b4-cefd87a75623  009834d7-98e9-4d81-bfa6-ceee681aa545  009d8ea4-df9a-4921-87ce-ff10c5811ac2  00a77c65-1ea9-4e6f-bbd6-d7da2379b30b  00a96258-6fa5-43d8-bef3-39d30600740c  00abfb96-0978-4b86-9706-055b985b1975  00c29edf-7a4b-4ddc-b8fd-ed333cf852e6  00c337de-f9ca-4c0c-8bb1-633360ba71ff  010a8d32-999c-4abe-9b7d-625dfde41833  014b7d1a-4d75-436f-a834-2831918ecd45  016c134d-d2b4-4ec4-b581-62de76c97ba2  017040a5-6086-4eb5-93ee-b7ce180b7341  01aefa8a-6396-4a41-92e4-daca7c7f2354  01bfbb0b-246c-4e9f-a5b1-91f758ffa433  01d07b81-9d1b-4990-be46-4eef085588c8  01e7f9c7-9f7c-4f2e-8c51-6daa0fb2548a  01eb3f89-509f-4478-a09e-d2e90276ebbf  01f34420-bad8-4ece-b561-0dc9c103a6aa  02049ccb-5c9c-4a88-9faa-3b6556cbf4a0  0222f3b2-fcc2-488c-9fe2-8bd3a840241b  0228e194-cfa6-4aea-a6b1-96c52cfda864  02718fed-8a1f-4dfd-bb7f-939f4dcbb2b1  0278db5b-7539-4283-8958-311032ef0d2b  0295140e-df99-4777-ac76-19214843bd6f  02a40306-b87a-40cf-8921-4b9c3fdbe79b  02a58b14-f166-4635-bc7f-00c3e6d7ffa0  02f7c17b-5a13-4a6d-83c0-5f0a9e08cb1b  02fb82ba-a561-4792-9290-ab0e05b2c68b  0309e0ba-3c86-4c6f-b74e-7e68cd9d921a  032a9377-3cf9-4882-90b9-870a91bfce71  03392472-b3d8-4e64-a63a-3d5bfdae4968  033b11f3-52e3-4a26-a998-5bc75ea76e39  03502285-42a2-4bca-a3b0-6e353e03266b  03d39028-74d8-40cb-8783-c8af543fe593  03f00092-f8ed-4b9f-ab8e-2b9892b69d6e  (+2357 more)
insight_engine/vector_db_building/: vector_db_building.py
insight_engine/word_cloud/: word_cloud.py
prompts/audience/: CEO.md  CFO.md
prompts/sys/: agent_sys_template.md  infer_user.md
prompts/user_type/: BD.md  CRP.md  transaction_lawyer.md
tests/: test_api.py  test_vectordb.py
