[tool.poetry]
name = "insight-engine"
version = "0.1.0"
description = ""
authors = ["Adam Osusky <adam.osusky02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
langchain = "^0.2.6"
langchain-openai = "^0.1.13"
python-dotenv = "^1.0.1"
chromadb = "0.5.0"
langchain-chroma = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
