[tool.poetry]
name = "insight-engine"
version = "0.1.0"
description = ""
authors = ["Adam Osusky <adam.osusky02@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.39.0"
networkx = "^3.3"
langchain = "^0.3.2"
openai = "^1.51.1"
matplotlib = "^3.9.2"
wordcloud = "^1.9.3"
fitz = "^0.0.1.dev2"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.2"
pymupdf = "^1.24.11"
chromadb = "^0.5.11"
pdfminer-six = "^20240706"
pi-heif = "^0.18.0"
unstructured-inference = "0.7.36"
unstructured = "0.14.9"
pdf2image = "^1.17.0"
pillow-heif = "^0.18.0"
langchain-community = "^0.3.1"
unstructured-pytesseract = "^0.3.13"
nltk = "^3.9.1"
protobuf = ">=3.20.0,<4.0.0" 
langchain-chroma = "^0.1.2"
langgraph = "^0.2.4"
fastapi = "^0.112.1"
kd_logging = { path = "droid-core/packages/kd_logging", develop = true }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"