[tool.poetry]
name = "insight-engine"
version = "0.1.0"
description = ""
authors = ["Adam Osusky <adam.osusky02@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.36.0"
langchain = "^0.2.6"
langchain-openai = "^0.1.13"
python-dotenv = "^1.0.1"
unstructured = "0.14.9"
chromadb = "0.5.0"
IPython = "^8.13.1"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
pymupdf = "^1.21.1"
networkx = "^3.0"
wordcloud = "^1.9.1.1"
matplotlib = "^3.7.1"
transformers = "^4.44.0"
langchain-community = "^0.2.11"
pdfminer-six = "20231228"
pillow-heif = "^0.18.0"
psutil = "^6.0.0"
pycryptodome = "^3.20.0"
poppler-utils = "^0.1.0"
openai = "^1.40.3"
langchain-experimental = "^0.0.64"
deprecated = "1.2.14"
xlsxwriter = "3.2.0"
antlr4-python3-runtime = "4.9.3"
effdet = "0.4.1"
et-xmlfile = "1.1.0"
google-api-core = "2.19.1"
google-auth = "2.33.0"
google-cloud-vision = "3.7.4"
grpcio-status = "1.65.4"
iopath = "0.1.10"
layoutparser = "0.3.4"
markdown = "3.6"
olefile = "0.47"
omegaconf = "2.3.0"
onnx = "1.16.2"
opencv-python = "4.10.0.84"
openpyxl = "3.1.5"
pdfplumber = "0.11.3"
pikepdf = "9.1.1"
proto-plus = "1.24.0"
pycocotools = "2.0.8"
pypandoc = "1.13"
pypdfium2 = "4.30.0"
python-docx = "1.1.2"
python-multipart = "0.0.9"
python-oxmsg = "0.0.1"
python-pptx = "0.6.23"
scipy = "1.14.0"
timm = "1.0.8"
torchvision = "0.19.0"
unstructured-inference = "0.7.36"
unstructured-pytesseract = "0.3.12"
xlrd = "2.0.1"
tesseract = "^0.1.3"
fitz = "^0.0.1.dev2"
langchain-text-splitters = "^0.2.2"
langchain-chroma = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
